Koa-react getAll() methods returns subset of records
When retrieving a group of records with getAll<ClassName>(), if the table display only requires a subset of columns, a .select() is added to the query

--- a/plugin-dev/koa-react/plugins/Entity/backend-controllers-Dao.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/backend-controllers-Dao.js.hbs
@@ -16,6 +16,9 @@ exports.getAll{{class.pluralName}} = async (ctx) => {
 
   try {
     const {{lowercase class.pluralName}} = await {{class.name}}.find()
+{{#if class.mongooseSelect }}
+      .select({{{class.mongooseSelect}}})
+{{/if}}
       .skip((page - 1) * limit)
       .limit(parseInt(limit, 10));
 
