--- a/plugin-dev/koa-react/plugins/Entity/frontend-src-components-table.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/frontend-src-components-table.js.hbs
@@ -46,10 +46,8 @@ const {{class.name}}Table = ({ onEdit }) => {
     <DataTable
       records={ {{lowercase class.pluralName}} }
       columns={[
-{{#each class.attributes as |attrib|}}
-{{#if attrib.visibleToTable}}
+{{#each class.tableAttribs as |attrib|}}
         { accessor: '{{attrib.jsIdentifierName}}', title: '{{attrib.mantineDataLabel}}' },
-{{/if}}        
 {{/each}}
         {
           accessor: 'actions',
