--- a/plugin-dev/koa-react/plugins/backend-index.js.hbs
+++ b/plugin-dev/koa-react/plugins/backend-index.js.hbs
@@ -80,6 +80,17 @@ app.use(async (ctx, next) => {
   }
 });
 
+app.use(async (ctx, next) => {
+  if (!ctx.state.user) {
+     // No user has been authenticated. Create the "guest" user
+     ctx.state.user = {
+       roles: ['guest']
+     };
+  } 
+  await next();
+});
+
+
 // Prefix API routes with /api/v1
 app.use(loginRoutes.routes()).use(loginRoutes.allowedMethods());
 {{#each model.entities as |entity|}}
