--- a/plugin-dev/koa-react/plugins/frontend-src-App.js.hbs
+++ b/plugin-dev/koa-react/plugins/frontend-src-App.js.hbs
@@ -5,7 +5,9 @@
 import React, { useState, useEffect } from 'react';
 import { BrowserRouter as Router, Route, Routes, NavLink } from 'react-router-dom';
 {{#each model.entities as |entity|}}
+{{#if entity.genCRUD}}
 import {{entity.name}}Page from './pages/{{entity.packageDirPath}}{{entity.name}}Page';
+{{/if}}
 {{/each}}
 import LoginPage from './pages/LoginPage';
 import PrivateRoute from './components/PrivateRoute';
@@ -15,7 +17,31 @@ function App() {
   const [isAuthenticated, setIsAuthenticated] = useState(apiClient.isAuthenticated());
 
   useEffect(() => {
-    const handleAuthChange = () => {
+    const handleAuthChange = async () => {
+
+      if (apiClient.isAuthenticated()) {
+
+         // Look up the current user
+         const user = await apiClient.fetchCurrentUser();
+
+         // Add a method to the user object to check if the user has one of the specified roles
+         user.hasRole = function(allowedRoles, ownerRole) {
+            let authorized = this.roles.some(role => allowedRoles.includes(role));
+            if (!authorized && allowedRoles.includes('owner')) {
+              authorized = this.roles.includes(ownerRole);
+            }
+            return authorized;
+         };
+
+         // Save the user in the global store
+         window.globalStore.user = user;
+         window.saveGlobalStore();
+      }
+      else {
+        window.globalStore.user = { username: 'guest', roles: ['guest'] };
+        window.saveGlobalStore();
+      }
+
       setIsAuthenticated(apiClient.isAuthenticated());
     };
 
@@ -32,7 +58,8 @@ function App() {
         <nav style={ { padding: '10px', backgroundColor: '#f8f9fa', borderBottom: '1px solid #ddd' } }>
           {isAuthenticated && (
             <>
-{{#each model.entities as |entity|}}            
+{{#each model.entities as |entity|}}
+{{#if entity.genCRUD}}
               <NavLink
                 to="/{{lowercase entity.pluralName}}"
                 style={ { margin: '0 10px', textDecoration: 'none', color: '#007bff' } }
@@ -40,6 +67,7 @@ function App() {
               >
                 {{entity.pluralName}}
               </NavLink>
+{{/if}}              
 {{/each}}              
              </>
           )}
@@ -55,7 +83,8 @@ function App() {
         </nav>
         <Routes>
           <Route path="/login" element={<LoginPage />} />
-{{#each model.entities as |entity|}}            
+{{#each model.entities as |entity|}}
+{{#if entity.genCRUD}}    
           <Route
             path="/{{lowercase entity.pluralName}}"
             element={
@@ -64,6 +93,7 @@ function App() {
               </PrivateRoute>
             }
           />
+{{/if}}          
 {{/each}}          
         </Routes>
       </Router>
