--- a/plugin-dev/koa-react/plugins/Entity/backend-route-import.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/backend-route-import.js.hbs
@@ -1,2 +1,2 @@
-##output {{#if class.genCRUD}}property{{else}}ignore{{/if}} entityRouteImport
+##output {{#if class.genREST}}property{{else}}ignore{{/if}} entityRouteImport
 const {{lowercase class.name}}Routes = require('./routes/{{class.packageDirPath}}{{lowercase class.name}}');
