koa-react do not generate frontend REST api client if noREST

--- a/plugin-dev/koa-react/plugins/Entity/frontend-src-api-client.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/frontend-src-api-client.js.hbs
@@ -1,4 +1,4 @@
-##output preserve {{@root.output}}/frontend/src/api/{{class.packageDirPath}}{{class.name}}Api.js
+##output {{#if class.genREST}}preserve{{else}}ignore{{/if}} {{@root.output}}/frontend/src/api/{{class.packageDirPath}}{{class.name}}Api.js
 import apiClient from '{{class.relativeParentPrefix}}/api/apiClient';
 
 export const fetch{{class.pluralName}} = async (page = 1, limit = 10, q) => {
