--- a/plugin-dev/koa-react/plugins/frontend-package.json.hbs
+++ b/plugin-dev/koa-react/plugins/frontend-package.json.hbs
@@ -20,6 +20,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.3",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",    
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
