FIX: koa-read read only forms
Marking form as "read only" was not working in koa react app

--- a/plugin-dev/koa-react/plugins/Entity/frontend-src-components-form.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/frontend-src-components-form.js.hbs
@@ -22,7 +22,7 @@
 {{indent}}    required
   {{/if}}
 {{indent}}    key={ form.key({{{defaultTo tickChar "'"}}}{{varPrefix}}{{varName}}{{{defaultTo tickChar "'"}}}) }
-{{indent}}    disabled={ form.readOnly }
+{{indent}}    readOnly={ readOnlyForm }
 {{indent}}    { ...form.getInputProps({{{defaultTo tickChar "'"}}}{{varPrefix}}{{varName}}{{{defaultTo tickChar "'"}}}
                    {{~#if (isdefined attrib.type.mantineInputType)~}}
                       , { type: '{{attrib.type.mantineInputType}}' }
@@ -91,7 +91,7 @@
 {{else}}
 {{> inputTag attrib=attrib varPrefix="" varName=(concat varName ".${index}") indent="            " tickChar="`" labelAttrib="placeholder"}}
 {{/if}}
-            { !form.readOnly && (
+            { !readOnlyForm && (
             <ActionIcon color="red" onClick={() => form.removeListItem('{{varName}}', index)}>
               <IconTrash size="1em" />
             </ActionIcon>
@@ -100,7 +100,7 @@
         ))}
 
         <Group justify="center" mt="md">
-          { !form.readOnly && (
+          { !readOnlyForm && (
           <Button
             onClick={ () =>
               form.insertListItem('{{varName}}',
@@ -156,9 +156,9 @@ const {{class.name}}Form = ({ {{lowercase class.name}}Id, onSave, onCancel }) =>
     },
     validate: {
     },
-    readOnly: !user.hasRole({{{class.writePermissions}}}, {{{class.ownPermission}}})
   });
 
+  const readOnlyForm = !user.hasRole({{{class.writePermissions}}}, {{{class.ownPermission}}})
 
   useEffect(() => {
     if ({{lowercase class.name}}Id) {
@@ -194,7 +194,7 @@ const {{class.name}}Form = ({ {{lowercase class.name}}Id, onSave, onCancel }) =>
   return (
     <form onSubmit={form.onSubmit(handleSubmit)}>   
 {{> inputObject attributes=class.formAttribs varPrefix="" indent="      "}}
-      { !form.readOnly && (
+      { !readOnlyForm && (
       <Button type="submit" mt="md">
         { {{lowercase class.name}}Id ? 'Update {{class.name}}' : 'Create {{class.name}}' }
       </Button>
